# headscale-auto-dns

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix
src/: headscale.rs  main.rs  processing.rs  traefik.rs
